--- a/app/src/main/res/layout/state_layout.xml
+++ b/app/src/main/res/layout/state_layout.xml
@@ -107,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Cured"
+            android:text="@string/recoverd"
 
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/subheading2"
