--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="lightBlue">#856200EE</color>
+    <color name="transaprentcolorPrimary">#460D3B8A</color>
+    <color name="bggray">#22828383</color>
 </resources>
