--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,8 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/cardview" />
+            app:layout_constraintTop_toTopOf="parent" />
     </ScrollView>
     <!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
 
