added decimal formatter

--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -107,7 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="1dp"
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="10dp"
             android:visibility="gone"
@@ -122,6 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Remaining text"
+                android:textSize="12sp"
                 android:textAlignment="textStart"
                 android:textColor="#B0FB0032" />
 
