--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -54,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text="Dummyedgfdfdfd"
                 android:textSize="10sp"
+                android:visibility="gone"
                 android:layout_marginStart="10dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="5dp"
